--- a/images.css
+++ b/images.css
@@ -1,17 +1,3 @@
-/* Testing CSS because my brain hurts */
-
-/* .container{
-    border: solid red 3px;
-}
-
-.row {
-    border: solid blue 3px;
-}
-
- */
-
-
-
 
 /* Nav Styling */
 
@@ -38,3 +24,14 @@
 }
 
 /* End of Header Styling */
+
+/* Start of About Me CSS */
+
+.headshotimg{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.abouttext{
+    margin-top: 30px;
+}
